# chameleon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flags_claix_clang_target.def  flags_claix_intel.def  flags_claix_ompss.def  flags_replace.def
CMakeModules/: CompileFlags.cmake  FFI.cmake  Hwloc.cmake  OpenMP.cmake
experiment/with-itac/cham_tool/: EXP-Chameleon-ENVs.sh  Makefile  check-job-status.sh  mxm_unequal_tasks.cpp  mxm_unequal_tasks_tool  submit_cham_tool_example.cmd  tool.cpp  tool.h
experiment/with-itac/examples/jacobi/: Makefile  check-job-status.sh  jacobi_cham.cpp  submit_example.cmd
src/: CMakeLists.txt  Makefile  Makefile.ompss  affinity_config_values.txt  cham_statistics.cpp  cham_statistics.h  cham_strategies.cpp  cham_strategies.h  chameleon.c  chameleon.cpp  chameleon.h  chameleon_common.cpp  chameleon_common.h  chameleon_lib.f90  chameleon_pre_init.h  chameleon_statistics.cpp  chameleon_statistics.h  chameleon_strategies.cpp  chameleon_strategies.h  chameleon_tools.cpp  chameleon_tools.h  chameleon_tools_internal.h  chameleon_version.h  chameleon_version.h.in  commthread.cpp  commthread.h  flags_claix_clang_target.def  flags_claix_intel.def  request_manager.cpp  request_manager.h
tests/: Makefile  tests-annotations.cpp  tests-example.cpp  tests-main.cpp
